--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   mqtt_client: ^9.7.2
   http: ^0.13.5
   flutter_secure_storage: ^6.0.0
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
